Bug-1636 FIXED sorterer først etter messagepk (desc), deretter markeres lydfiler (de 3 første i messagepk desc) som heter "TLF:%" med prioritet. Så kjøres normal sortering som sortering på prioritet først, deretter alfabetisk