@@ -8,12 +8,15 @@ import no.ums.pas.ums.errorhandling.Error;
 
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.util.Comparator;
 
 
-public abstract class SoundlibFile extends Object implements ActionListener{
+public abstract class SoundlibFile extends Object implements ActionListener, Comparable<SoundlibFile>{
 	//'l_sh, deptpk, name, pk, def, langpk, template
+	private int m_n_listpriority = 0;
 	private boolean m_b_shared;
 	private int m_n_deptpk;
+	private int m_n_type;
 	private String m_sz_name;
 	private String m_sz_messagepk = "-1";
 	//private int m_n_moduledef;
@@ -30,6 +33,9 @@ public abstract class SoundlibFile extends Object implements ActionListener{
 	public String get_messagepk() { return m_sz_messagepk; }
 	public String get_name() { return m_sz_name; }
 	public String get_moduledef() { return m_sz_moduledef; }
+	public int get_type() { return m_n_type; }
+	public void setListPriority(int n) { m_n_listpriority = n; }
+	public int getListPriority() { return m_n_listpriority; }
 	protected abstract boolean read(String sz_dest);
 	private String m_sz_sourcefile;
 	private String m_sz_localfile;
@@ -41,16 +47,17 @@ public abstract class SoundlibFile extends Object implements ActionListener{
 	public int get_deptpk() { return m_n_deptpk; }
 		
 	public SoundlibFile(String [] values, String sz_fileext) {
-		this(new Boolean(values[0]).booleanValue(), new Integer(values[1]).intValue(),
-				values[2], values[3], values[4], sz_fileext);
+		this(new Boolean(values[0]).booleanValue(), Integer.valueOf(values[1]),
+				values[2], values[3], values[4], Integer.valueOf(values[7]), sz_fileext);
 	}
-	public SoundlibFile(boolean b_shared, int n_deptpk, String sz_name, String sz_messagepk, String sz_moduledef, String sz_fileext) {
+	public SoundlibFile(boolean b_shared, int n_deptpk, String sz_name, String sz_messagepk, String sz_moduledef, int n_type, String sz_fileext) {
 		m_b_shared	= b_shared;
 		m_n_deptpk	= n_deptpk;
 		m_sz_name	= sz_name;
 		m_sz_messagepk= sz_messagepk;
 		m_sz_moduledef= sz_moduledef;
 		m_sz_fileext = sz_fileext;
+		m_n_type = n_type;
 		m_sz_sourcefile	= /*PAS.get_pas().get_sitename()*/ PAS.get_pas().getVB4Url() + "/bbmessages/" + m_n_deptpk + "/" + this.get_messagepk() + "." + sz_fileext;
 		m_sz_localfile  = this.get_messagepk() + "." + sz_fileext;
 	}
@@ -63,6 +70,7 @@ public abstract class SoundlibFile extends Object implements ActionListener{
 		m_sz_messagepk= sz_refno_fileno;
 		m_sz_moduledef= sz_moduledef;
 		m_sz_fileext = sz_fileext;
+		m_n_type = -1;
 		//m_sz_sourcefile	= PAS.get_pas().get_sitename() + "bbmessages/" + m_n_deptpk + "/" + this.get_messagepk() + "." + sz_fileext;
 		m_sz_sourcefile = /*PAS.get_pas().get_sitename()*/ PAS.get_pas().getVB4Url() + "/" + sz_urlpath + "/" + sz_refno_fileno + "." + sz_fileext;
 		m_sz_localfile  = this.get_messagepk() + "." + sz_fileext;
@@ -102,7 +110,25 @@ public abstract class SoundlibFile extends Object implements ActionListener{
 		}
 	}
 	
-	
+	public static class CompareMessagePk implements Comparator<SoundlibFile>
+	{
+		@Override
+		public int compare(SoundlibFile o1, SoundlibFile o2) {
+			return (int)(Long.valueOf(o2.get_messagepk())-Long.valueOf(o1.get_messagepk()));
+		}		
+	}
+
+	@Override
+	public int compareTo(SoundlibFile o) {
+		if(o.getListPriority() != this.getListPriority())
+			return o.getListPriority() - this.getListPriority();
+		if(o.getListPriority()!=0)
+		{
+			return (int)(Long.valueOf(o.get_messagepk())-Long.valueOf(get_messagepk()));			
+		}
+		return get_name().toUpperCase().compareTo(o.get_name().toUpperCase());
+	}
+
 }
 
 
